# VoiceAIBot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/agents/: agent_v1.yaml  agent_v2.yaml  agent_v3.yaml  archive.json
configs/evaluation/: rubric_v1.yaml
configs/personas/: angry_defaulter.yaml  cooperative_defaulter.yaml  curious_defaulter.yaml  distressed_defaulter.yaml  evasive_defaulter.yaml
logs/: evalutaion_report.txt  evolution_logs.txt  voice-ai-bot.txt
scripts/: run_evaluation.py  run_evolution.py  run_simulation.py  run_voice_server.py
src/agent/: config_loader.py  prompt_builder.py
src/evaluation/: evaluator.py  metrics.py  report_generator.py  rubric_loader.py
src/evolution/: archive.py  failure_analyzer.py  mutator.py
src/simulation/: conversation_runner.py  persona_loader.py  persona_simulator.py  session_recorder.py
src/utils/: llm_client.py  logger.py
src/voice/: end_call_detector.py  pipeline_factory.py  serializer.py  server.py  services.py
src/voiceaibot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
